--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<main>
 		<section>
 			<h2>Witaj na mojej stronie internetowej</h2>
-			<p>Tutaj możesz dowiedziec sie o mnie i moich zainteresowaniach.</p>
+			<p>Jest to przykładowa strona </p>
 			<img src="obrazek.jpg" alt="Obrazek">
 			<button onclick="przywitanie()">Kliknij, aby mnie przywitac</button>
 			<p id="witaj"></p>
