--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 	<footer>
 		<p> 2023 Moja strona internetowa</p>
 	</footer>
-	<script src="skrypt.js"></script>
+	<script src="scrypt.js"></script>
 </body>
 </html>
